# vassl-tools

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml
.github/workflows/: release.yml
assets/: logo-mark-preview.html
assets/docs/: 404.html  index.html
assets/docs/_astro/: common.B8eoS10T.css
assets/docs/getting-started/first-run/: index.html
assets/docs/getting-started/installation/: index.html
assets/docs/getting-started/introduction/: index.html
assets/docs/modules/inventory/: index.html
assets/docs/modules/pricebook/: index.html
assets/docs/modules/quotations/: index.html
assets/docs/modules/suppliers/: index.html
assets/docs/pagefind/: pagefind-entry.json  pagefind.en_57d3bfafe8.pf_meta  pagefind.en_fdf5fdc2ff.pf_meta
assets/docs/pagefind/fragment/: en_1cc7963.pf_fragment  en_3f22ded.pf_fragment  en_3f6d7e1.pf_fragment  en_64338de.pf_fragment  en_6462288.pf_fragment  en_7ea1536.pf_fragment  en_83f59b2.pf_fragment  en_885cd48.pf_fragment  en_8a26d11.pf_fragment  en_90dedce.pf_fragment  en_91503a6.pf_fragment  en_9b4b9ae.pf_fragment  en_a39e828.pf_fragment  en_adcc5f3.pf_fragment  en_b739ecf.pf_fragment  en_c5ebb21.pf_fragment  en_de9b93c.pf_fragment  en_e4ecb11.pf_fragment  en_e73c745.pf_fragment
assets/docs/pagefind/index/: en_5cd5dd1.pf_index  en_f5e496e.pf_index
assets/docs/reference/audit-log/: index.html
assets/docs/reference/global-search/: index.html
assets/docs/reference/keybindings/: index.html
assets/docs/reference/settings/: index.html
assets/docs/releases/v0-1-0/: index.html
assets/icons/: README.md  vassl.icns
assets/keymaps/: default.json
crates/collections/: Cargo.toml
crates/db/: Cargo.toml
crates/db/src/: db.rs  kvp.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/release_channel/: Cargo.toml
crates/release_channel/src/: lib.rs
crates/sqlez/: Cargo.toml
crates/sqlez/src/: bindable.rs
crates/sqlez_macros/: Cargo.toml
crates/util/: Cargo.toml
crates/util/src/: lib.rs  paths.rs
crates/vassl-app/: Cargo.toml  build.rs  entitlements.plist
crates/vassl-app/src/: about_dialog.rs  actions.rs  app.rs  app_menus.rs  assets.rs  audit_log.rs  auto_update.rs  changelog.rs  colors.rs  command_palette.rs  docs_server.rs  first_run.rs  global_search.rs  importer.rs  keybindings.rs  license.rs  license_dialog.rs  login_panel.rs  main.rs  root.rs  settings_panel.rs  sidebar.rs  status_bar.rs  users_db.rs
crates/vassl-app/src/platform/: macos.rs  mod.rs  windows.rs
crates/vassl-app/wix/: License.rtf  main.wxs
crates/vassl-core/: Cargo.toml
crates/vassl-core/src/: lib.rs  price_entry.rs  product.rs  project.rs  quotation.rs  supplier.rs
crates/vassl-db/: Cargo.toml
crates/vassl-db/src/: lib.rs  migrations.rs  shared.rs
crates/vassl-inventory/: Cargo.toml
crates/vassl-inventory/src/: colors.rs  db.rs  importer.rs  lib.rs  panel.rs  product_form.rs  product_list.rs  restock.rs  stock_form.rs  store.rs
crates/vassl-pricebook/: Cargo.toml
crates/vassl-pricebook/src/: colors.rs  db.rs  lib.rs  panel.rs  price_form.rs  price_history.rs  price_table.rs  store.rs
crates/vassl-quotations/: Cargo.toml
crates/vassl-quotations/src/: colors.rs  db.rs  lib.rs  line_item_form.rs  panel.rs  project_form.rs  project_list.rs  project_panel.rs  quotation_detail.rs  quotation_form.rs  quotation_list.rs  store.rs
crates/vassl-seed/: Cargo.toml
crates/vassl-seed/src/: main.rs
crates/vassl-suppliers/: Cargo.toml
crates/vassl-suppliers/src/: db.rs  lib.rs  panel.rs  store.rs  supplier_form.rs  supplier_list.rs
crates/vassl-ui/: Cargo.toml
crates/vassl-ui/src/: dropdown.rs  lib.rs  scrollbar.rs  text_input.rs  theme.rs  tooltip.rs
crates/zed_env_vars/: Cargo.toml
crates/zed_env_vars/src/: lib.rs
docs-site/: astro.config.mjs  package.json
docs-site/src/content/docs/: index.mdx
docs-site/src/content/docs/getting-started/: first-run.mdx  installation.md  installation.mdx  introduction.md  introduction.mdx
docs-site/src/content/docs/modules/: inventory.md  inventory.mdx  pricebook.mdx  quotations.md  quotations.mdx  suppliers.md  suppliers.mdx
docs-site/src/content/docs/reference/: audit-log.md  audit-log.mdx  global-search.md  global-search.mdx  keybindings.md  keybindings.mdx  settings.md  settings.mdx
docs-site/src/content/docs/releases/: v0-1-0.mdx
docs-site/src/styles/: custom.css
docs/agents/: domain.md  issue-tracker.md
docs/research/: 2026-05-30-rust-codebase-patterns.md  2026-05-30-zed-gpui-patterns.md
docs/superpowers/plans/: 2026-05-30-foundation.md  2026-05-30-inventory.md  2026-05-31-app-polish.md  2026-05-31-pricebook.md  2026-05-31-quotations.md  2026-06-01-price-history-context-menu.md  2026-06-01-product-description.md  2026-06-01-search.md  2026-06-01-settings-ui.md  2026-06-01-supplier-management.md
docs/superpowers/specs/: 2026-05-30-vassl-tools-design.md  2026-06-01-price-history-context-menu-design.md  2026-06-01-product-description-design.md  2026-06-01-search-design.md  2026-06-01-settings-ui-design.md  2026-06-01-supplier-management-design.md
