[workspace.package]
version = "0.1.0-beta.5"

[workspace]
members = [
    "crates/vassl-core",
    "crates/vassl-db",
    "crates/vassl-app",
    "crates/vassl-inventory",
    "crates/vassl-quotations",
    "crates/vassl-pricebook",
    "crates/vassl-suppliers",
    "crates/vassl-ui",
    "crates/vassl-seed",
    # Vendored from Zed monorepo
    "crates/collections",
    "crates/util",
    "crates/paths",
    "crates/release_channel",
    "crates/zed_env_vars",
    "crates/sqlez",
    "crates/sqlez_macros",
    "crates/db",
]
default-members = ["crates/vassl-app"]
resolver = "2"

[workspace.dependencies]
# UI
gpui          = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["runtime_shaders", "font-kit"] }

# Error handling
anyhow    = "1"
thiserror = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
tracing-appender    = "0.2"

# DB / migration
inventory = "0.3"

# Platform paths + time
dirs   = "5"
chrono = { version = "0.4", features = ["serde"] }

# Text input grapheme navigation
unicode-segmentation = "1"

# Live config reload
arc-swap = "1"

# XLSX import
calamine  = "0.26"
rusqlite  = { version = "0.32", features = ["bundled"] }

# Asset embedding
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

vassl-ui = { path = "crates/vassl-ui" }

# Vendored Zed crates
collections    = { path = "crates/collections" }
util           = { path = "crates/util" }
paths          = { path = "crates/paths" }
release_channel = { path = "crates/release_channel" }
zed_env_vars   = { path = "crates/zed_env_vars" }
sqlez          = { path = "crates/sqlez" }
sqlez_macros   = { path = "crates/sqlez_macros" }
db             = { path = "crates/db" }
