[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/db.rs"
doctest = false

[dependencies]
anyhow = "1"
gpui = { git = "https://github.com/zed-industries/zed" }
indoc = "2"
inventory = "0.3"
log = "0.4"
paths = { path = "../paths" }
release_channel = { path = "../release_channel" }
sqlez = { path = "../sqlez" }
sqlez_macros = { path = "../sqlez_macros" }
util = { path = "../util" }
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
zed_env_vars = { path = "../zed_env_vars" }

[dev-dependencies]
tempfile = "3"

[features]
test-support    = []
zed-test-harness = []
