[package]
name = "sqlez"
version = "0.1.0"
edition = "2024"
publish = false
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
collections = { path = "../collections" }
futures = "0.3"
indoc = "2"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
log = "0.4"
parking_lot = "0.12"
pollster = "0.4"
sqlformat = "0.2"
thread_local = "1.1.4"
util = { path = "../util" }
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
