[package]
name = "sqlez_macros"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/sqlez_macros.rs"
proc-macro = true
doctest = false

[dependencies]
sqlez = { path = "../sqlez" }
sqlformat = "0.2"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
