[package]
name    = "vassl-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vassl"
path = "src/main.rs"

[dependencies]
gpui.workspace               = true
gpui_platform.workspace      = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true
dirs.workspace               = true
tracing-log                  = "0.2"
vassl-db                     = { path = "../vassl-db" }
vassl-inventory              = { path = "../vassl-inventory" }
vassl-quotations             = { path = "../vassl-quotations" }
vassl-pricebook              = { path = "../vassl-pricebook" }
