[package]
name    = "vassl-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vassl"
path = "src/main.rs"

[package.metadata.bundle]
name         = "VASSL"
identifier   = "com.kamalu.vassl"
icon         = ["../../assets/icons/vassl_512.png",
                "../../assets/icons/vassl_256.png",
                "../../assets/icons/vassl_128.png",
                "../../assets/icons/vassl_32.png"]
version      = "0.1.0"
copyright    = "Copyright © 2026 Kamalu Ltd. All rights reserved."
category     = "Business"
short_description = "VASSL — internal tools for inventory, pricing, and quotations."
long_description  = """
VASSL is Kamalu Ltd.'s internal operations platform for managing inventory,
price books, supplier contacts, and client quotations.
"""

[package.metadata.bundle.windows]
wix = "installer/vassl.wxs"

[dependencies]
gpui.workspace               = true
gpui_platform.workspace      = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true
dirs.workspace               = true
tracing-log                  = "0.2"
vassl-core                   = { path = "../vassl-core" }
vassl-db                     = { path = "../vassl-db" }
vassl-inventory              = { path = "../vassl-inventory" }
vassl-quotations             = { path = "../vassl-quotations" }
vassl-pricebook              = { path = "../vassl-pricebook" }
vassl-ui                     = { path = "../vassl-ui" }
vassl-suppliers              = { path = "../vassl-suppliers" }
sqlez.workspace              = true
