[package]
name        = "vassl-app"
version     = "0.1.0-alpha.15"
edition     = "2021"
default-run = "vassl"
autobins    = false

[[bin]]
name = "vassl"
path = "src/main.rs"

[package.metadata.bundle]
name         = "VASSL"
identifier   = "com.kamalu.vassl"
icon         = ["../../assets/icons/vassl.icns"]
version      = "0.1.0-alpha.15"
copyright    = "Copyright © 2026 Video Access Security Solutions Ltd. All rights reserved."
category     = "Business"
short_description = "VASSL — internal tools for inventory, pricing, and quotations."
long_description  = """
VASSL is Video Access Security Solutions Ltd.'s internal operations platform for managing inventory,
price books, supplier contacts, and client quotations.
"""

[package.metadata.bundle.windows]
wix = "installer/vassl.wxs"

[dependencies]
gpui.workspace               = true
gpui_platform.workspace      = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true
dirs.workspace               = true
tracing-log                  = "0.2"
vassl-core                   = { path = "../vassl-core" }
vassl-db                     = { path = "../vassl-db" }
vassl-inventory              = { path = "../vassl-inventory" }
vassl-quotations             = { path = "../vassl-quotations" }
vassl-pricebook              = { path = "../vassl-pricebook" }
vassl-ui                     = { path = "../vassl-ui" }
vassl-suppliers              = { path = "../vassl-suppliers" }
release_channel.workspace    = true
sqlez.workspace              = true
chrono.workspace             = true
serde.workspace              = true
serde_json.workspace         = true
semver                       = { version = "1", features = ["serde"] }
sha2                         = { version = "0.10", default-features = false }
ureq                         = { version = "2", features = ["json", "native-tls"] }
zip                          = { version = "2", default-features = false, features = ["deflate"] }
rust-embed.workspace         = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc  = "0.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
