[package]
name    = "vassl-inventory"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui.workspace       = true
anyhow.workspace     = true
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
chrono.workspace     = true
sqlez.workspace      = true
vassl-db             = { path = "../vassl-db" }
vassl-core           = { path = "../vassl-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
db = { path = "../db", features = ["test-support"] }
